[package]
name = "rust-fetch"
version = "0.7.8"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
bytes = "1"
env_logger = "0.9"
futures-retry = "0.6"
static_vcruntime = "1"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.reqwest]
git = "https://github.com/TextsHQ/reqwest"
branch = "master"
default-features = false
# Cookies is used for the time_jar in order to invoke pre-redirect headers sets in reqwest.
features = ["native-tls-alpn", "gzip", "brotli", "cookies", "socks"]

[dependencies.neon]
git = "https://github.com/neon-bindings/neon"
branch = "main"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
