[package]
name = "rust-fetch"
version = "0.8.2"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
bytes = "1"
env_logger = "0.10"
futures-retry = "0.6"
static_vcruntime = "1"
rustls-native-certs = "0.6"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.reqwest]
git = "https://github.com/TextsHQ/reqwest"
branch = "master"
default-features = false
# Cookies is used for the time_jar in order to invoke pre-redirect headers sets in reqwest.
features = ["rustls-tls", "gzip", "brotli", "cookies", "socks"]

[dependencies.rustls]
version = "0.20"
features = ["dangerous_configuration"]

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
